--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a class="nav-link " href="gestion.html">Gestion</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="contacto.html">Contactos</a>
+            <a class="nav-link " href="contactos.html">Contactos</a>
           </li>
         </ul>
         
